[SPARK-56955][CORE] Add --sun-misc-unsafe-memory-access=allow for JDK 25+
JDK 25 restricts unsafe memory access by default, breaking Arrow/Netty
memory allocator initialization (EmptyByteBuf.memoryAddress() throws
UnsupportedOperationException). Add the JVM flag to restore access
when running on JDK 25+.

Closes #SPARK-56955